# roadpy

./: CHANGELOG.md  LICENCE  LICENSE  PI_data.csv  README.md  README.md.backup  coordinate_input_data.csv  design_input_data.csv  environment.yml  geometric_element_calculation_results.csv  geometric_input_data.csv  pyproject.toml  requirements.txt  setup.py  test.py
.github/workflows/: python-package-conda.yml
roadpy/: __init__.py  alignment.py  environment.yml  test.yml
roadpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: alignment.py  design_input_data.csv  geometric_element_calculation_results.csv  test.py
