[project]
name = "roadpy"
version = "0.0.1"
authors = [
  { name="nasri", email="nasriaw@gmail.com" },
  
]
description = "A small geometric design package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ['numpy', 'pandas', 'matplotlib']
keywords = ['roadpy']
[project.urls]
Homepage = "https://github.com/nasriaw/roadpy/tree/main"
#Issues = "https://github.com/pypa/sampleproject/issues"
